--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import './abstracts/variables';
+@import './base/base';
 
 body {
-  background: #f4e640;
+  background-color: var(--coral);
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--poppins);
   font-size: 1.5em;
 }
 
