enhancement/Add stamp style to global

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,7 @@
 @import "./abstracts/variables";
 @import "./base/base";
 @import "./base/typography";
+@import "./components/stamp";
 
 body {
   background-color: var(--coral);
