--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -6,6 +6,8 @@
   --pearl-bush: #f0e9e5;
   --paco: #40180f;
   --cod-gray: #1b1b1b;
+  --white: #fff;
+  --black: #000;
 
   //Elevations
   --biggest-box-shadow: 0 7px 18px rgba(0, 0, 0, 0.4);
