--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,8 @@
 @import "./abstracts/variables";
 @import "./base/base";
 @import "./base/typography";
+@import "./components/title";
+@import "./components/subtitle";
 
 body {
   background-color: var(--coral);
