components related to the header and the page menu

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
-@import './abstracts/variables';
-@import './base/base';
+@import "./abstracts/variables";
+@import "./components/navigation";
+@import "./base/base";
 
 body {
   background-color: var(--coral);
