--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -16,6 +16,7 @@
       display: block;
       padding: 4px;
       z-index: 1;
+      font-size: 1rem;
       text-decoration: none;
       letter-spacing: 0.005em;
       position: relative;
