--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -1,7 +1,4 @@
-@import "../abstracts/variables";
-@import "../base/base";
-
-.navegation {
+.navigation {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -11,7 +8,7 @@
     margin-right: 22px;
     text-decoration: none;
 
-    li {
+    a {
       color: var(--tuscany);
       display: block;
       padding: 4px;
@@ -24,7 +21,7 @@
       transition: all 0.5s;
     }
 
-    li::after {
+    a::after {
       display: block;
       position: absolute;
       top: 0;
@@ -36,36 +33,36 @@
       height: 1px;
       content: ".";
       color: transparent;
-      background: var(--coral);
+      background-color: var(--coral);
       visibility: none;
       opacity: 0;
       z-index: -1;
       transition: all 0.5s;
     }
 
-    li:hover {
+    a:hover {
       color: var(--cod-gray);
     }
 
-    li:hover::after {
+    a:hover::after {
       opacity: 0.5;
       visibility: visible;
       height: 100%;
     }
 
-    li:focus::after {
+    a:focus::after {
       opacity: 0.5;
       visibility: visible;
       height: 100%;
     }
 
-    li::before {
+    a::before {
       transition: all 0.5s;
     }
   }
 }
 
-.navegation__logo {
+.navigation__logo {
   margin-left: 41px;
   width: 60.25px;
   height: 63.94px;
@@ -80,33 +77,33 @@
   justify-content: space-between;
   background-color: var(--pearl-bush);
   filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
-}
 
-.hamburger {
-  list-style-type: none;
-  border: none;
-  box-sizing: border-box;
-  display: none;
-  cursor: pointer;
-  color: var(--tuscany);
-  font-size: 24px;
-  border-radius: 3px;
-  background: var(--pearl-bush);
-  padding: 4px 6px;
-  margin-right: 17px;
-  line-height: 30px;
-  font-weight: bold;
-  text-align: center;
-  user-select: none;
-  transition: all 0.5s;
+  &__burguer-menu {
+    list-style-type: none;
+    border: none;
+    box-sizing: border-box;
+    display: none;
+    cursor: pointer;
+    color: var(--tuscany);
+    font-size: 24px;
+    border-radius: 3px;
+    background-color: var(--pearl-bush);
+    padding: 4px 6px;
+    margin-right: 17px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    user-select: none;
+    transition: all 0.5s;
 
-  &:hover {
-    background-color: rgb(255, 118, 84, 0.5);
+    &:hover {
+      background-color: rgb(255, 118, 84, 0.5);
+    }
   }
 }
 
-@media screen and (max-width: 570px) {
-  .navegation {
+@media screen and (max-width: $tablet-viewport) {
+  .navigation {
     position: absolute;
     display: none;
     filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
@@ -124,14 +121,14 @@
     }
   }
 
-  .navegation li {
+  .navigation a {
     list-style-type: none;
     padding: 10px;
     margin: 5px;
     width: 100%;
   }
 
-  .navegation__logo {
+  .navigation__logo {
     margin-left: 16px;
   }
 
@@ -139,7 +136,7 @@
     display: block;
   }
 
-  .hamburger {
+  .header__burguer-menu {
     display: block;
   }
 }
