--- a/styles/components/_sitemap.scss
+++ b/styles/components/_sitemap.scss
@@ -1,4 +1,4 @@
-.Sitemap {
+.sitemap {
   display: flex;
   flex-direction: column;
   margin-bottom: 100px;
@@ -7,7 +7,7 @@
     color: var(--black);
     margin-bottom: 12px;
     display: inline-block;
-    font-size: 12px;
+    font-size: 0.75rem;
 
     &:hover {
       text-decoration: underline;
@@ -16,7 +16,7 @@
 }
 
 @media screen and (min-width: ($tablet-viewport+1)) {
-  .Sitemap {
+  .sitemap {
     flex-direction: row;
     margin-bottom: 42px;
 
@@ -25,7 +25,7 @@
     }
 
     &__link {
-      font-size: 16px;
+      font-size: 1rem;
     }
   }
 }
