--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@
 @import "./base/typography";
 @import "./components/title";
 @import "./components/subtitle";
+@import "./components/button";
 
 body {
   background-color: var(--coral);
