Artwork component and card not complete

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,15 @@
 @import "./abstracts/variables";
 @import "./base/base";
 @import "./base/typography";
+@import "./layout/layout";
+@import "./layout/container";
+@import "./layout/footer";
 @import "./components/navigation";
 @import "./components/stamp";
 @import "./components/socialMedia";
 @import "./components/sitemap";
 @import "./components/title";
 @import "./components/subtitle";
-@import "./layout/layout";
-@import "./layout/container";
-@import "./layout/footer";
+@import "./components/caption";
+@import "./components/artwork";
+@import "./components/cardArtwork";
