--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  font-family: var(--poppins);
+}
+
 img {
   max-width: 100%;
   width: 100%;
