prepare to pagination

--- a/styles/components/_artwork.scss
+++ b/styles/components/_artwork.scss
@@ -1,6 +1,5 @@
 .artwork {
-  /* grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto; */
+  padding-bottom: 120px;
   background-color: #f0e9e5;
 
   &__header {
