--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -72,6 +72,7 @@
   display: flex;
   position: fixed;
   top: 0;
+  z-index: 6;
   width: 100%;
   align-items: center;
   justify-content: space-between;
