--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,6 +17,5 @@
 @import "./components/sitemap";
 @import "./components/title";
 @import "./components/subtitle";
-@import "./components/cards";
-@import "./components/card";
+@import "./components/profileCard";
 @import "./components/button";
