--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,11 +1,3 @@
-.button__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: 5px;
-}
-
 .button {
   display: flex;
   flex-direction: row;
@@ -19,4 +11,11 @@
   font-size: 14px;
   cursor: pointer;
   border: 0;
+  margin-top: 5px;
+
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
