--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,3 +19,4 @@
 @import "./components/subtitle";
 @import "./components/profileCard";
 @import "./components/button";
+@import "./components/profiles";
