Profile component & Button Component (#9)
* Button component

* Fixes for button component

* Change onclick event to be handled via props

* Create Profile component

* Delete logs

* Add style for flat button

* Create profile component

* Fix stamp position on title

Co-authored-by: Nelson Barrera <nbarrera@hugeinc.com>

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,3 +17,6 @@
 @import "./components/sitemap";
 @import "./components/title";
 @import "./components/subtitle";
+@import "./components/profileCard";
+@import "./components/button";
+@import "./components/profiles";
