Components and styles for the aliados section

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -6,6 +6,7 @@
   --pearl-bush: #f0e9e5;
   --paco: #40180f;
   --cod-gray: #1b1b1b;
+  --orange: #be482c;
   --white: #fff;
   --black: #000;
   --pink: #ffd4c9;
