--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,7 @@
 @import "./components/profileCard";
 @import "./components/button";
 @import "./components/profiles";
+@import "./components/aliadosSection";
+@import "./components/aliadosSlide";
+@import "./components/aliadosCarousel";
+@import "swiper/components/pagination/pagination.scss";
