--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -19,3 +19,10 @@
     align-items: center;
   }
 }
+
+.button:hover {
+  background: var(--white);
+  border: 1px solid var(--tuscany);
+  box-sizing: border-box;
+  color: var(--tuscany);
+}
