--- a/styles/components/_cardArtwork.scss
+++ b/styles/components/_cardArtwork.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
+  transition: margin 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 
   &__header {
     display: flex;
@@ -44,7 +45,9 @@
 
 @media screen and (min-width: ($tablet-viewport+1)) {
   .card-artwork {
-    width: calc(33.3% - #{$desktop-margin * 0.6});
+    width: calc(33.3% - #{$desktop-margin * 0.5 + 3});
+    min-width: calc(33.3% - #{$desktop-margin * 0.5 + 3});
+    margin-right: $desktop-margin;
 
     &__details {
       margin: 25px 0;
