--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,4 @@
 @import "./components/caption";
 @import "./components/artwork";
 @import "./components/cardArtwork";
+@import "./components/pagination";
