--- a/styles/components/_cardArtwork.scss
+++ b/styles/components/_cardArtwork.scss
@@ -1,10 +1,14 @@
 .card-artwork {
   width: calc(50% - #{$mobile-margin * 0.5});
+  min-width: calc(50% - #{$mobile-margin * 0.5});
+  margin-right: $mobile-margin;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
-  transition: margin 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  margin-bottom: 44px;
 
   &__header {
     display: flex;
@@ -48,6 +52,7 @@
     width: calc(33.3% - #{$desktop-margin * 0.5 + 3});
     min-width: calc(33.3% - #{$desktop-margin * 0.5 + 3});
     margin-right: $desktop-margin;
+    margin-bottom: 0;
 
     &__details {
       margin: 25px 0;
