Change hover style to button component Add disabled style to button component

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -10,6 +10,8 @@
   --white: #fff;
   --black: #000;
   --pink: #ffd4c9;
+  --silver: #c8c8c8;
+  --storm-dust: #616161;
 
   //Elevations
   --biggest-box-shadow: 0 7px 18px rgba(0, 0, 0, 0.4);
