--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -12,17 +12,23 @@
   cursor: pointer;
   border: 0;
   margin-top: 5px;
+  letter-spacing: 0.0125em;
+  text-transform: uppercase;
 
   &__container {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-}
 
-.button:hover {
-  background: var(--white);
-  border: 1px solid var(--tuscany);
-  box-sizing: border-box;
-  color: var(--tuscany);
+  &:hover {
+    background: var(--pueblo);
+  }
+
+  &:disabled {
+    background: var(--silver);
+    box-sizing: border-box;
+    color: var(--storm-dust);
+    cursor: no-drop;
+  }
 }
