--- a/styles/components/_cardArtwork.scss
+++ b/styles/components/_cardArtwork.scss
@@ -6,7 +6,9 @@
   flex-direction: column;
   justify-content: space-between;
   flex-wrap: wrap;
-  transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    left 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    margin 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   margin-bottom: 36px;
 
