--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&display=swap");
 @import "../abstracts/mixins";
 
+body {
+  font-family: var(--poppins);
+}
+
 .hero {
   &__tag {
     padding: 0;
