--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,14 +12,18 @@
 @import "./layout/footer";
 
 // components
+@import "./components/button";
 @import "./components/navigation";
 @import "./components/stamp";
 @import "./components/socialMedia";
 @import "./components/sitemap";
 @import "./components/title";
 @import "./components/subtitle";
+@import "./components/caption";
+@import "./components/artwork";
+@import "./components/cardArtwork";
+@import "./components/pagination";
 @import "./components/profileCard";
-@import "./components/button";
 @import "./components/profiles";
 @import "./components/hero";
 @import "./components/aliadosSection";
