Adding component objetivos to the quienes-somos page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,3 +30,5 @@
 @import "./components/aliadosSlide";
 @import "./components/aliadosCarousel";
 @import "swiper/components/pagination/pagination.scss";
+@import "./components/objetivos";
+@import "./components/objetivosCard";
