--- a/styles/components/_objetivos.scss
+++ b/styles/components/_objetivos.scss
@@ -10,10 +10,10 @@
 .objetivos__container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 96px;
+  padding-top: 96px;
 }
 
-@media screen and (max-width: ($mobile-viewport)) {
+@media screen and (max-width: ($tablet-viewport)) {
   .objetivos__container {
     padding-top: 25px;
   }
