--- a/styles/components/_alliesSlide.scss
+++ b/styles/components/_alliesSlide.scss
@@ -1,4 +1,4 @@
-.aliadosSlide {
+.alliesSlide {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   align-items: center;
@@ -43,7 +43,7 @@
   }
 }
 
-.aliadosSlide__brands {
+.alliesSlide__brands {
   grid-column: 1/8;
   grid-row: 2/3;
   background-color: var(--orange);
@@ -64,7 +64,7 @@
 }
 
 @media screen and (max-width: ($tablet-viewport)) {
-  .aliadosSlide {
+  .alliesSlide {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 191px 1fr auto;
 
@@ -94,7 +94,7 @@
     }
   }
 
-  .aliadosSlide__brands {
+  .alliesSlide__brands {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     grid-gap: 0;
