--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,9 +26,9 @@
 @import "./components/profileCard";
 @import "./components/profiles";
 @import "./components/hero";
-@import "./components/aliadosSection";
-@import "./components/aliadosSlide";
-@import "./components/aliadosCarousel";
+@import "./components/alliesSection";
+@import "./components/alliesSlide";
+@import "./components/alliesCarousel";
 @import "swiper/components/pagination/pagination.scss";
-@import "./components/objetivos";
-@import "./components/objetivosCard";
+@import "./components/objectives";
+@import "./components/objectivesCard";
