--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,7 +32,7 @@
 @import "swiper/components/pagination/pagination.scss";
 @import "./components/objectives";
 @import "./components/objectivesCard";
-@import "./components/statements/statement.scss";
+@import "./components/statement.scss";
 
 @media screen and (max-width: ($tablet-viewport+1)) {
   .line {
