--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -65,4 +65,12 @@
     justify-content: center;
     align-items: center;
   }
+
+  &--artwork {
+    width: 270px;
+  }
+
+  &--artwork-return {
+    margin-top: 30px;
+  }
 }
