--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -23,13 +23,15 @@
   &__stamp {
     grid-column: 1/2;
     grid-row: 2/3;
-    text-align: center;
+    place-self: center;
   }
 
   &__copy {
     grid-column: 1/3;
     grid-row: 3/4;
     text-align: center;
+    padding: 16px 0;
+    margin: 80px 0 0;
   }
 
   &__title {
@@ -64,12 +66,14 @@
       grid-column: 9/12;
       grid-row: 1/3;
       text-align: right;
+      place-self: center stretch;
     }
 
     &__copy {
       grid-column: 2/9;
       grid-row: 2/3;
       text-align: left;
+      margin: 0;
     }
 
     &__title {
