Add Statement component for mision and vision information (#23)
* Add Statement component for mision and vision information

* Fix names and re-order files

Co-authored-by: Nelson Barrera <nbarrera@hugeinc.com>

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,3 +32,10 @@
 @import "swiper/components/pagination/pagination.scss";
 @import "./components/objectives";
 @import "./components/objectivesCard";
+@import "./components/statement.scss";
+
+@media screen and (max-width: ($tablet-viewport+1)) {
+  .line {
+    height: 2px;
+  }
+}
