--- a/styles/components/_statement.scss
+++ b/styles/components/_statement.scss
@@ -40,17 +40,16 @@
 @media screen and (max-width: ($tablet-viewport)) {
   .statements__wrapper {
     padding-top: 32px;
-    margin-right: 17px;
     display: flex;
     flex-direction: column;
     max-height: 702px;
+    margin-bottom: 8px;
   }
 
   .statement {
     display: flex;
     flex-direction: column;
     padding-bottom: 24px;
-    margin-left: 26px;
 
     &__description {
       width: auto;
