--- a/styles/components/_methodology.scss
+++ b/styles/components/_methodology.scss
@@ -15,9 +15,10 @@
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       grid-column-gap: 24px;
-      margin-right: 5.3%;
+      margin-right: 5.8%;
       justify-content: center;
       text-align: center;
+      margin-left: 78px;
     }
   }
 
@@ -26,7 +27,7 @@
       padding: 16px 0 0 0;
       max-width: 1058px;
       max-height: 129px;
-      grid-column: 3/12;
+      grid-column: 2/12;
       text-align: initial;
     }
   }
@@ -42,13 +43,13 @@
     display: flex;
     justify-content: space-between;
     padding-top: 87px;
-    grid-column: 3/12;
+    grid-column: 2/12;
   }
 
   &__title-wrapper {
     &--child {
       padding-top: 64px;
-      grid-column: 3/12;
+      grid-column: 2/12;
     }
   }
 }
