Refactor and standard values to margin property

--- a/styles/components/_methodology.scss
+++ b/styles/components/_methodology.scss
@@ -15,10 +15,9 @@
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       grid-column-gap: 24px;
-      margin-right: 5.8%;
+      margin: 0 5.8% 0 5.8%;
       justify-content: center;
       text-align: center;
-      margin-left: 78px;
     }
   }
 
