Feat/Profile-detail

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,6 +34,8 @@
 @import "./components/objectivesCard";
 @import "./components/statement.scss";
 @import "./components/impactLevel";
+@import "./components/profileDetail";
+@import "./components/profileDetailEl";
 
 @media screen and (max-width: ($tablet-viewport+1)) {
   .line {
