Add margin and fix misplaced variables

--- a/styles/components/_artworkArticleDetails.scss
+++ b/styles/components/_artworkArticleDetails.scss
@@ -41,7 +41,7 @@
   .artwork-details {
     &__container {
       max-width: 448px;
-      margin-left: 80px;
+      margin: 0 20px 0 80px;
     }
 
     &__information-container {
