--- a/styles/components/_profileCard.scss
+++ b/styles/components/_profileCard.scss
@@ -1,21 +1,27 @@
 .profile {
   width: 330px;
-  height: 572px;
   background: var(--white);
   opacity: 1;
   box-shadow: var(--small-box-shadow);
   overflow: hidden;
   flex-direction: column;
+  margin-right: 24px;
+  padding-bottom: 90px;
+  position: relative;
+
+  &:last-child {
+    margin-right: 0;
+  }
 
   &__container {
     width: 100%;
-    height: 718px;
     background: var(--white);
     opacity: 1;
     position: relative;
     left: 0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding-bottom: 100px;
   }
 
   &__image {
@@ -67,7 +73,13 @@
     padding-left: 25px;
     padding-right: 23px;
     padding-top: 11px;
-    height: 24%;
+  }
+
+  &__button {
+    position: absolute;
+    bottom: 30px;
+    right: 0;
+    left: 0;
   }
 }
 
@@ -76,6 +88,8 @@
     width: 343px;
     height: 380px;
     margin-top: 35px;
+    max-width: 100%;
+    margin-right: 0;
 
     &__container {
       display: flex;
