--- a/styles/components/_methodology.scss
+++ b/styles/components/_methodology.scss
@@ -1,4 +1,3 @@
-
 .methodology {
   align-items: center;
   display: flex;
@@ -65,7 +64,7 @@
     &__container {
       &--child {
         display: flex;
-        margin-right: 0;
+        margin: 0;
       }
     }
 
