Bugfix/Artist-Testing

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -94,7 +94,7 @@ body {
       &--profile {
         b {
           background-color: var(--pink);
-          font-weight: normal;
+          font-weight: 300;
         }
       }
     }
