--- a/styles/components/_artworkArticleDetails.scss
+++ b/styles/components/_artworkArticleDetails.scss
@@ -8,6 +8,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin: 36px 0 36px 0;
+    font-size: 0.875rem;
+    letter-spacing: 0.0025em;
   }
 
   &__title {
@@ -20,6 +22,8 @@
 
   &__description {
     margin: 29px 0 64px 0;
+    font-size: 0.875rem;
+    letter-spacing: 0.0025em;
   }
 
   &__information-container {
