Padding and color fixes in Quienes Somos page

--- a/styles/components/_objectives.scss
+++ b/styles/components/_objectives.scss
@@ -17,5 +17,6 @@
 @media screen and (max-width: ($tablet-viewport)) {
   .objectives__container {
     margin-top: 25px;
+    padding-bottom: 34px;
   }
 }
