--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -37,4 +37,12 @@ a {
   width: 100%;
   height: 11px;
   background-color: var(--tuscany);
+
+  &--color-pueblo {
+    background-color: var(--pueblo);
+  }
+
+  &--color-antique-brass {
+    background-color: var(--antique-brass);
+  }
 }
