Build fix on 404 and delete link warning

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,6 +23,7 @@
 @import "./components/artwork";
 @import "./components/cardArtwork";
 @import "./components/pagination";
+@import "./components/pageError";
 @import "./components/profileCard";
 @import "./components/profiles";
 @import "./components/hero";
